# mdrender

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: render_large.rs
openspec/changes/add-ci-binary-releases/: design.md  proposal.md  tasks.md
openspec/changes/add-ci-binary-releases/specs/release-automation/: spec.md
openspec/changes/add-less-pager/: design.md  proposal.md  tasks.md
openspec/changes/add-less-pager/specs/terminal-markdown-rendering/: spec.md
openspec/changes/archive/2026-07-07-build-terminal-markdown-renderer/: design.md  proposal.md
openspec/changes/archive/2026-07-07-build-terminal-markdown-renderer/specs/terminal-markdown-rendering/: spec.md
openspec/changes/archive/2026-07-07-rename-binary-to-mdr/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-07-rename-binary-to-mdr/specs/terminal-markdown-rendering/: spec.md
openspec/changes/build-terminal-markdown-renderer/: tasks.md
openspec/specs/terminal-markdown-rendering/: spec.md
src/: ansi.rs  cli.rs  highlight.rs  layout.rs  lib.rs  main.rs  model.rs  parser.rs  render.rs  test_support.rs  wrap.rs
tests/: cli.rs  layout.rs  rendering.rs
xtask/src/: main.rs
