[workspace]
members = [".", "xtask"]

[package]
name = "mdrender"
version = "0.1.0"
edition = "2021"
description = "A pipe-friendly terminal Markdown renderer"
license = "MIT"

[dependencies]
anstyle = "1"
anyhow = "1"
atty = "0.2"
clap = { version = "4", features = ["derive"] }
hyphenation = "0.8"
pulldown-cmark = "0.13"
terminal_size = "0.4"
tree-sitter-highlight = "0.25"
unicode-linebreak = "0.1"
unicode-width = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bench]]
name = "render_large"
harness = false
